--- a/examples/Bourdet_1983_2/Bourdet_example_2.ini
+++ b/examples/Bourdet_1983_2/Bourdet_example_2.ini
@@ -13,7 +13,7 @@
 ###############################################################################
 [Title]
 title  = Bourdet et al, (1983), Example 2;
-caseid = buildup test;
+caseid = buildup test of an acidized well;
 
 
 ###############################################################################
@@ -57,11 +57,12 @@ h         = 22.2504;	formation thickness [m]
 rw        = 0.1222248;	wellbore radius [m]
 ct        = 0.00014223;	total compressibility [cm2/kgf]
 pi        = 179.900;	initial pressure [kgf/cm2]
-S	  = 4.0;		skin factor
+S	  = 0.0;		skin factor
 k	  = 200.0;		permeability [md]
 C	  = 0.001;	    wellbore storage [m3/kgf/cm2]
 re	  = 2000.0;	    external radius [m]
-L	  = 10000.0;	    distance to the sealing fault [m]
+L	  = 10000.0;	distance to the sealing fault [m]
+xf	  = 100.0;	    fracture half length [m]
 
 
 ###########################################################################
@@ -74,6 +75,10 @@ L	  = 10000.0;	    distance to the sealing fault [m]
 #  5 for homogeneous reservoir, parallel linear sealing faults (S and C)
 #  6 for homogeneous reservoir, parallel linear sealing faults (S, C = 0)
 #  7 for homogeneous rectangular reservoir (S, C)
+#  8 for double porosity infinite reservoir (S, C) pss
+#  9 for double porosity infinite reservoir (S, C) transient slabs
+# 10 for double porosity infinite reservoir (S, C) transient spheres
+# 11 for infinite reservoir (S,C) with infinite conductivity fractured well
 ###########################################################################
 [Regression model]
 model = 0;
@@ -86,7 +91,7 @@ rp_C	= 1;
 rp_pi	= 1;
 rp_re	= 0;
 rp_L	= 0;
-
+rp_xf	= 0;
 
 ###############################################################################
 #  Derivatives:
@@ -102,6 +107,7 @@ jac_C	=  0;
 jac_pi	=  0;
 jac_re	=  0;
 jac_L	=  0;
+jac_xf	=  2;
 
 
 [Derivative parameters]
