--- a/examples/Bourdet_1983b/Bourdet_1983b.ini
+++ b/examples/Bourdet_1983b/Bourdet_1983b.ini
@@ -1,10 +1,12 @@
 ###############################################################################
-# Data from Use of Artificial Intelligence in Well-Test Interpretation,
-# Olivier F. Allain and Roland N. Horne, SPE-18160
+# Data from: Interpreting Well Test in Fractured Reservoirs, Bourdet D., Ayoub 
+# J. A., Whittle T. M., Pirard Y. M. and Kniazeff V., World Oil (1983). Also:
+# Use of Artificial Intelligence in Well-Test Interpretation, Olivier F. Allain 
+# and Roland N. Horne, SPE-18160
 ###############################################################################
 [Title]
-title  = Allain and Horne, (1990);
-caseid = buildup test interpreted as a well close to a sealing fault;
+title  = Bourdet et al (1983b);
+caseid = buildup test interpreted as double porosity PSS interporosity flow;
 
 
 ###############################################################################
@@ -37,9 +39,9 @@ units  = 0;
 ###############################################################################
 [Test description]
 testtype  = 5;
-pressfile = examples/Allain_1990/Allain_1990_p.dat; [h vs. psia]
+pressfile = examples/Bourdet_1983b/Bourdet_1983b_p.dat; [h vs. psia]
 presssize = 183;
-ratefile  = examples/Allain_1990/Allain_1990_q.dat; [h vs. stb/d]
+ratefile  = examples/Bourdet_1983b/Bourdet_1983b_q.dat; [h vs. stb/d]
 ratesize  = 4;
 phi       = 0.05;		porosity
 B         = 1.5;		formation volume fator
@@ -51,12 +53,14 @@ pi        = 3911.43; 	initial pressure [psi]
 S	  = -3.11;		skin factor
 k	  = 566.00;		permeability [md]
 C	  = 0.02223;	    wellbore storage [bbl/psi]
-L	  = 2500.0;	    distance to the sealing fault [ft]
+omega  = 0.217;
+lambda = 2.8e-8;
 #pi        = 3909.43; 	initial pressure [psi]
 #S	  = -1.93;		skin factor
 #k	  = 678.00;		permeability [md]
 #C	  = 0.0311;	    wellbore storage [bbl/psi]
-
+#omega  = 0.237;
+#lambda = 2.13e-8;
 
 
 ###########################################################################
@@ -69,10 +73,12 @@ L	  = 2500.0;	    distance to the sealing fault [ft]
 #  5 for homogeneous reservoir, parallel linear sealing faults (S and C)
 #  6 for homogeneous reservoir, parallel linear sealing faults (S, C = 0)
 #  7 for homogeneous rectangular reservoir (S, C)
-#  8 for double porosity infinite reservoir (S, C)
+#  8 for double porosity infinite reservoir (S, C) pss
+#  9 for double porosity infinite reservoir (S, C) transient slabs
+# 10 for double porosity infinite reservoir (S, C) transient spheres
 ###########################################################################
 [Regression model]
-model = 4;
+model = 8;
 
 
 [Regression parameters]
@@ -80,7 +86,8 @@ rp_S	  = 1;
 rp_k	  = 1;
 rp_C	  = 1;
 rp_pi	  = 1;
-rp_L	  = 1;
+rp_omega  = 1;
+rp_lambda = 1;
 
 
 ###############################################################################
@@ -91,15 +98,16 @@ rp_L	  = 1;
 #  2 for centered finite differences
 ###############################################################################
 [Regression parameters derivatives]
-jac_S	   =  0;
-jac_k	   =  0;
-jac_C	   =  0;
-jac_pi	   =  0;
-jac_L	   =  0;
+jac_S	   =  2;
+jac_k	   =  2;
+jac_C	   =  2;
+jac_pi	   =  2;
+jac_omega  =  2;
+jac_lambda =  2;
 
 
 [Derivative parameters]
-Lder	= 0.2; 	dreivative interval
+Lder	= 0.1; 	dreivative interval
 
 
 [Stehfest parameters]
@@ -108,5 +116,5 @@ nstehfest = 16;
 
 [Output]
 plots   = 1;
-outfile = examples/Allain_1990/Allain_1990a.out;
+outfile = examples/Bourdet_1983b/Bourdet_1983b.out;
 
