--- a/examples/Bourdet_1983b/Bourdet_1983b_a.ini
+++ b/examples/Bourdet_1983b/Bourdet_1983b_a.ini
@@ -1,10 +1,12 @@
 ###############################################################################
-# Data from Use of Artificial Intelligence in Well-Test Interpretation,
-# Olivier F. Allain and Roland N. Horne, SPE-18160
+# Data from: Interpreting Well Test in Fractured Reservoirs, Bourdet D., Ayoub
+# J. A., Whittle T. M., Pirard Y. M. and Kniazeff V., World Oil (1983). Also:
+# Use of Artificial Intelligence in Well-Test Interpretation, Olivier F. Allain
+# and Roland N. Horne, SPE-18160
 ###############################################################################
 [Title]
-title  = Allain and Horne, (1990);
-caseid = buildup test, double porosity transient interporosity flow (slabs);
+title  = Bourdet et al (1983b);
+caseid = buildup test interpreted as a well close to a sealing fault;
 
 
 ###############################################################################
@@ -37,9 +39,9 @@ units  = 0;
 ###############################################################################
 [Test description]
 testtype  = 5;
-pressfile = examples/Allain_1990/Allain_1990_p.dat; [h vs. psia]
+pressfile = examples/Bourdet_1983b/Bourdet_1983b_p.dat; [h vs. psia]
 presssize = 183;
-ratefile  = examples/Allain_1990/Allain_1990_q.dat; [h vs. stb/d]
+ratefile  = examples/Bourdet_1983b/Bourdet_1983b_q.dat; [h vs. stb/d]
 ratesize  = 4;
 phi       = 0.05;		porosity
 B         = 1.5;		formation volume fator
@@ -49,10 +51,14 @@ rw        = 0.29;	    wellbore radius [ft]
 ct        = 0.00002;	total compressibility [1/psi]
 pi        = 3911.43; 	initial pressure [psi]
 S	  = -3.11;		skin factor
-k	  = 100.00;		permeability [md]
+k	  = 566.00;		permeability [md]
 C	  = 0.02223;	    wellbore storage [bbl/psi]
-omega  = 0.311;
-lambda = 2.3e-8;
+L	  = 2500.0;	    distance to the sealing fault [ft]
+#pi        = 3909.43; 	initial pressure [psi]
+#S	  = -1.93;		skin factor
+#k	  = 678.00;		permeability [md]
+#C	  = 0.0311;	    wellbore storage [bbl/psi]
+
 
 
 ###########################################################################
@@ -65,20 +71,20 @@ lambda = 2.3e-8;
 #  5 for homogeneous reservoir, parallel linear sealing faults (S and C)
 #  6 for homogeneous reservoir, parallel linear sealing faults (S, C = 0)
 #  7 for homogeneous rectangular reservoir (S, C)
-#  8 for double porosity infinite reservoir (S, C), PPS
-#  9 for double porosity infinite reservoir (S, C), transient
+#  8 for double porosity infinite reservoir (S, C) pss
+#  9 for double porosity infinite reservoir (S, C) transient slabs
+# 10 for double porosity infinite reservoir (S, C) transient spheres
 ###########################################################################
 [Regression model]
-model = 9;
+model = 4;
 
 
 [Regression parameters]
 rp_S	  = 1;
 rp_k	  = 1;
 rp_C	  = 1;
-rp_pi	  = 0;
-rp_omega  = 1;
-rp_lambda = 1;
+rp_pi	  = 1;
+rp_L	  = 1;
 
 
 ###############################################################################
@@ -89,12 +95,11 @@ rp_lambda = 1;
 #  2 for centered finite differences
 ###############################################################################
 [Regression parameters derivatives]
-jac_S	   =  2;
-jac_k	   =  2;
-jac_C	   =  2;
-jac_pi	   =  2;
-jac_omega  =  2;
-jac_lambda =  2;
+jac_S	   =  0;
+jac_k	   =  0;
+jac_C	   =  0;
+jac_pi	   =  0;
+jac_L	   =  0;
 
 
 [Derivative parameters]
@@ -107,5 +112,5 @@ nstehfest = 16;
 
 [Output]
 plots   = 1;
-outfile = examples/Allain_1990/Allain_1990b.out;
+outfile = examples/Bourdet_1983b/Bourdet_1983b_a.out;
 
