--- a/examples/Bourdet_1983b/Bourdet_1983b_b.ini
+++ b/examples/Bourdet_1983b/Bourdet_1983b_b.ini
@@ -1,10 +1,12 @@
 ###############################################################################
-# Data from: G. Da Prat et al, Use of Pressure Transient Testing To Evaluate
-# Fractured in Western Venezuela Reservoirs, SPE 13054, 1994
+# Data from: Interpreting Well Test in Fractured Reservoirs, Bourdet D., Ayoub
+# J. A., Whittle T. M., Pirard Y. M. and Kniazeff V., World Oil (1983). Also:
+# Use of Artificial Intelligence in Well-Test Interpretation, Olivier F. Allain
+# and Roland N. Horne, SPE-18160
 ###############################################################################
 [Title]
-title  = Da Prat et al, (1984);
-caseid = drawdown test in MACH-3X well;
+title  = Bourdet et al (1983b);
+caseid = buildup test, double porosity transient interporosity flow (slabs);
 
 
 ###############################################################################
@@ -36,23 +38,23 @@ units  = 0;
 #  6 multirate drawdown
 ###############################################################################
 [Test description]
-testtype  = 1;
-pressfile = examples/DaPrat_1984_DD/DaPrat_1984a_DD_p.dat; [h vs. psia]
-presssize = 64;
-ratefile  = examples/DaPrat_1984_DD/DaPrat_1984_DD_q.dat; [h vs. stb/d]
-ratesize  = 1;
-phi       = 0.048;		porosity
-B         = 1.8235;		formation volume fator
-mu        = 0.362;		viscosity [cp]
-h         = 65.0;	    formation thickness [ft]
-rw        = 0.2917;	    wellbore radius [ft]
-ct        = 24.5e-6;	total compressibility [1/psi]
-pi        = 11348.0; 	initial pressure [psi]
-S	  = -1.00;		skin factor
-k	  = 10.00;		permeability [md]
-C	  = 0.01;	    wellbore storage [bbl/psi]
-omega  = 0.01;
-lambda = 1.0e-7;
+testtype  = 5;
+pressfile = examples/Bourdet_1983b/Bourdet_1983b_p.dat; [h vs. psia]
+presssize = 183;
+ratefile  = examples/Bourdet_1983b/Bourdet_1983b_q.dat; [h vs. stb/d]
+ratesize  = 4;
+phi       = 0.05;		porosity
+B         = 1.5;		formation volume fator
+mu        = 0.3;		viscosity [cp]
+h         = 7.0;	    formation thickness [ft]
+rw        = 0.29;	    wellbore radius [ft]
+ct        = 0.00002;	total compressibility [1/psi]
+pi        = 3911.43; 	initial pressure [psi]
+S	  = -3.11;		skin factor
+k	  = 100.00;		permeability [md]
+C	  = 0.02223;	    wellbore storage [bbl/psi]
+omega  = 0.311;
+lambda = 2.3e-8;
 
 
 ###########################################################################
@@ -65,10 +67,12 @@ lambda = 1.0e-7;
 #  5 for homogeneous reservoir, parallel linear sealing faults (S and C)
 #  6 for homogeneous reservoir, parallel linear sealing faults (S, C = 0)
 #  7 for homogeneous rectangular reservoir (S, C)
-#  8 for double porosity infinite reservoir (S, C)
+#  8 for double porosity infinite reservoir (S, C) pss
+#  9 for double porosity infinite reservoir (S, C) transient slabs
+# 10 for double porosity infinite reservoir (S, C) transient spheres
 ###########################################################################
 [Regression model]
-model = 8;
+model = 9;
 
 
 [Regression parameters]
@@ -97,7 +101,7 @@ jac_lambda =  2;
 
 
 [Derivative parameters]
-Lder	= 0.1; 	dreivative interval
+Lder	= 0.2; 	dreivative interval
 
 
 [Stehfest parameters]
@@ -106,5 +110,4 @@ nstehfest = 16;
 
 [Output]
 plots   = 1;
-outfile = examples/DaPrat_1984_DD/DaPrat_1984a_DD.out;
-
+outfile = examples/Bourdet_1983b/Bourdet_1983b_b.out;
