--- a/examples/Samad_1994_9/Samad_1994_9.ini
+++ b/examples/Samad_1994_9/Samad_1994_9.ini
@@ -1,19 +1,10 @@
 ###############################################################################
-# D. Bourdet et al, A New Set of Type Curves Simplifies Well Test Analysis,
-# World Oil, May, 1983
-#
-# Production time tp = 18.04 hr
-# Flow rate q = 1500 Bbl/D
-# Formation volume factor B = 1.3
-# Fluid viscosity mu = 0.5 cp
-# Porosity phi = 0.2
-# Formation thickness h = 73 ft
-# Total compressibility ct = 1. E-5 1/psi
-# Wellbore radius rw = 0.401 ft
+# Data from: APPLICATION OF PRESSURE AND PRESSURE INTEGRAL FUNCTIONS FOR THE
+# ANALYSIS OF WELL TEST DATA, MSc Thesis by ZAHID SAMAD, TAMU, 1994
 ###############################################################################
 [Title]
-title  = Bourdet et al, (1983), Example 2;
-caseid = buildup test of an acidized well;
+title  = Samad (1994), example 9;
+caseid = falloff test in a fractured well, interpreted as a drawdown;
 
 
 ###############################################################################
@@ -31,7 +22,7 @@ mode  = 0;
 #  1 ANP
 ###############################################################################
 [Units system]
-units  = 1;
+units  = 0;
 
 
 ###############################################################################
@@ -45,24 +36,23 @@ units  = 1;
 #  6 multirate drawdown
 ###############################################################################
 [Test description]
-testtype  = 2;
-pressfile = examples/Bourdet_1983_2/Bourdet_example_2_p.dat;[h vs. kgf/cm2]
-presssize = 104;
-ratefile  = examples/Bourdet_1983_2/Bourdet_example_2_q.dat;[h vs. m3/d]
-ratesize  = 2;
-phi       = 0.25;		porosity
-B         = 1.3;		formation volume fator
-mu        = 0.5;		viscosity [cp]
-h         = 22.2504;	formation thickness [m]
-rw        = 0.1222248;	wellbore radius [m]
-ct        = 0.00014223;	total compressibility [cm2/kgf]
-pi        = 179.900;	initial pressure [kgf/cm2]
+testtype  = 1;
+pressfile = examples/Samad_1994_9/Samad_1994_9_p.dat; [h vs. psia]
+presssize = 464;
+ratefile  = examples/Samad_1994_9/Samad_1994_9_q.dat; [h vs. stb/d]
+ratesize  = 1;
+phi       = 0.18;		porosity
+B         = 1.002;		formation volume fator
+mu        = 0.934;		viscosity [cp]
+h         = 235.0;	    formation thickness [ft]
+rw        = 0.198;	    wellbore radius [ft]
+ct        = 6.53e-6;	total compressibility [1/psi]
+pi        = 2334.10; 	initial pressure [psi]
 S	  = 0.0;		skin factor
-k	  = 200.0;		permeability [md]
-C	  = 0.001;	    wellbore storage [m3/kgf/cm2]
-re	  = 2000.0;	    external radius [m]
-L	  = 10000.0;	distance to the sealing fault [m]
-xf	  = 100.0;	    fracture half length [m]
+k	  = 10.0;		permeability [md]
+C	  = 1.21e-5;	    wellbore storage [bbl/psi]
+xf	  = 100.00;	    fracture half length [ft]
+fc	  = 100.0;	    fracture conductivity [ft md]
 
 
 ###########################################################################
@@ -79,19 +69,20 @@ xf	  = 100.0;	    fracture half length [m]
 #  9 for double porosity infinite reservoir (S, C) transient slabs
 # 10 for double porosity infinite reservoir (S, C) transient spheres
 # 11 for infinite reservoir (S,C) with infinite conductivity fractured well
+# 12 for infinite reservoir (S,C) with finite conductivity fractured well
 ###########################################################################
 [Regression model]
-model = 0;
+model = 12;
 
 
 [Regression parameters]
-rp_S	= 1;
-rp_k	= 1;
-rp_C	= 1;
-rp_pi	= 1;
-rp_re	= 0;
-rp_L	= 0;
-rp_xf	= 0;
+rp_S	  = 0;
+rp_k	  = 1;
+rp_C	  = 0;
+rp_pi	  = 0;
+rp_xf     = 1;
+rp_fc     = 1;
+
 
 ###############################################################################
 #  Derivatives:
@@ -101,13 +92,12 @@ rp_xf	= 0;
 #  2 for centered finite differences
 ###############################################################################
 [Regression parameters derivatives]
-jac_S	=  2;
-jac_k	=  2;
-jac_C	=  2;
-jac_pi	=  2;
-jac_re	=  2;
-jac_L	=  2;
-jac_xf	=  2;
+jac_S	   =  2;
+jac_k	   =  2;
+jac_C	   =  0;
+jac_pi	   =  2;
+jac_xf     =  2;
+jac_fc     =  2;
 
 
 [Derivative parameters]
@@ -115,10 +105,10 @@ Lder	= 0.1; 	dreivative interval
 
 
 [Stehfest parameters]
-nstehfest = 16;
+nstehfest = 14;
 
 
 [Output]
 plots   = 1;
-outfile = examples/Bourdet_1983_2/Bourdet_example_2.out;
+outfile = examples/Samad_1994_9/Samad_1994_9.out;
 
