--- a/examples/Samad_1994_7/Samad_1994_7.ini
+++ b/examples/Samad_1994_7/Samad_1994_7.ini
@@ -50,7 +50,7 @@ ct        = 7.70e-6;	total compressibility [1/psi]
 pi        = 3119.41; 	initial pressure [psi]
 S	  = 0.0;		skin factor
 k	  = 10.0;		permeability [md]
-C	  = 1.0e-2;	    wellbore storage [bbl/psi]
+C	  = 0.0704518; 1.0e-2;	    wellbore storage [bbl/psi]
 xf	  = 100.00;	    fracture half length [ft]
 
 
@@ -90,9 +90,9 @@ rp_xf     = 1;
 #  2 for centered finite differences
 ###############################################################################
 [Regression parameters derivatives]
-jac_S	   =  2;
+jac_S	   =  0;
 jac_k	   =  2;
-jac_C	   =  2;
+jac_C	   =  0;
 jac_pi	   =  2;
 jac_xf     =  2;
 
