--- a/examples/Lee_2003_2_12/Lee_example_2_12.ini
+++ b/examples/Lee_2003_2_12/Lee_example_2_12.ini
@@ -78,6 +78,12 @@ re	  = 500.0;	    external radius [m]
 #  5 for homogeneous reservoir, parallel linear sealing faults (S and C)
 #  6 for homogeneous reservoir, parallel linear sealing faults (S, C = 0)
 #  7 for homogeneous rectangular reservoir (S, C)
+#  8 for double porosity infinite reservoir (S, C) pss
+#  9 for double porosity infinite reservoir (S, C) transient slabs
+# 10 for double porosity infinite reservoir (S, C) transient spheres
+# 11 for infinite reservoir (S,C) with infinite conductivity fractured well
+# 12 for infinite reservoir (S,C) with finite conductivity fractured well
+# 13 for homogeneous anisotropic infinite reservoir (S, C) limited entry well
 ###########################################################################
 [Regression model]
 model = 2;
@@ -105,7 +111,7 @@ jac_pi	=  0;
 jac_re	=  0;
 
 
-[Derivative parameters]
+[Smoothing parameters]
 Lder	= 0.1;
 
 
