--- a/examples/Samad_1994_7/Samad_1994_7.ini
+++ b/examples/Samad_1994_7/Samad_1994_7.ini
@@ -69,6 +69,7 @@ xf	  = 100.00;	    fracture half length [ft]
 # 10 for double porosity infinite reservoir (S, C) transient spheres
 # 11 for infinite reservoir (S,C) with infinite conductivity fractured well
 # 12 for infinite reservoir (S,C) with finite conductivity fractured well
+# 13 for homogeneous anisotropic infinite reservoir (S, C) limited entry well
 ###########################################################################
 [Regression model]
 model = 11;
@@ -99,7 +100,7 @@ jac_xf     =  2;
 dx_xf      =  1.0e-3;
 
 
-[Derivative parameters]
+[Smoothing parameters]
 Lder	= 0.15; 	dreivative interval
 
 
