--- a/examples/Bourdet_1983_2/Bourdet_example_2.ini
+++ b/examples/Bourdet_1983_2/Bourdet_example_2.ini
@@ -79,6 +79,8 @@ xf	  = 100.0;	    fracture half length [m]
 #  9 for double porosity infinite reservoir (S, C) transient slabs
 # 10 for double porosity infinite reservoir (S, C) transient spheres
 # 11 for infinite reservoir (S,C) with infinite conductivity fractured well
+# 12 for infinite reservoir (S,C) with finite conductivity fractured well
+# 13 for homogeneous anisotropic infinite reservoir (S, C) limited entry well
 ###########################################################################
 [Regression model]
 model = 0;
@@ -110,7 +112,7 @@ jac_L	=  2;
 jac_xf	=  2;
 
 
-[Derivative parameters]
+[Smoothing parameters]
 Lder	= 0.1; 	dreivative interval
 
 
