--- a/examples/Bourdet_1983b/Bourdet_1983b.ini
+++ b/examples/Bourdet_1983b/Bourdet_1983b.ini
@@ -76,6 +76,9 @@ lambda = 2.8e-8;
 #  8 for double porosity infinite reservoir (S, C) pss
 #  9 for double porosity infinite reservoir (S, C) transient slabs
 # 10 for double porosity infinite reservoir (S, C) transient spheres
+# 11 for infinite reservoir (S,C) with infinite conductivity fractured well
+# 12 for infinite reservoir (S,C) with finite conductivity fractured well
+# 13 for homogeneous anisotropic infinite reservoir (S, C) limited entry well
 ###########################################################################
 [Regression model]
 model = 8;
@@ -106,7 +109,7 @@ jac_omega  =  2;
 jac_lambda =  2;
 
 
-[Derivative parameters]
+[Smoothing parameters]
 Lder	= 0.1; 	dreivative interval
 
 
