--- a/examples/Bourdet_1983b/Bourdet_1983b_a.ini
+++ b/examples/Bourdet_1983b/Bourdet_1983b_a.ini
@@ -74,6 +74,9 @@ L	  = 2500.0;	    distance to the sealing fault [ft]
 #  8 for double porosity infinite reservoir (S, C) pss
 #  9 for double porosity infinite reservoir (S, C) transient slabs
 # 10 for double porosity infinite reservoir (S, C) transient spheres
+# 11 for infinite reservoir (S,C) with infinite conductivity fractured well
+# 12 for infinite reservoir (S,C) with finite conductivity fractured well
+# 13 for homogeneous anisotropic infinite reservoir (S, C) limited entry well
 ###########################################################################
 [Regression model]
 model = 4;
@@ -102,7 +105,7 @@ jac_pi	   =  0;
 jac_L	   =  0;
 
 
-[Derivative parameters]
+[Smoothing parameters]
 Lder	= 0.2; 	dreivative interval
 
 
