--- a/examples/Lee_2003_2_12/Lee_example_2_12b.ini
+++ b/examples/Lee_2003_2_12/Lee_example_2_12b.ini
@@ -80,6 +80,12 @@ w2y   = 300.0;      distance to fault 2 y
 #  5 for homogeneous reservoir, parallel linear sealing faults (S and C)
 #  6 for homogeneous reservoir, parallel linear sealing faults (S, C = 0)
 #  7 for homogeneous rectangular reservoir (S, C)
+#  8 for double porosity infinite reservoir (S, C) pss
+#  9 for double porosity infinite reservoir (S, C) transient slabs
+# 10 for double porosity infinite reservoir (S, C) transient spheres
+# 11 for infinite reservoir (S,C) with infinite conductivity fractured well
+# 12 for infinite reservoir (S,C) with finite conductivity fractured well
+# 13 for homogeneous anisotropic infinite reservoir (S, C) limited entry well
 ###########################################################################
 [Regression model]
 model = 7;
@@ -113,7 +119,7 @@ jac_w1y	=  2;
 jac_w2y	=  2;
 
 
-[Derivative parameters]
+[Smoothing parameters]
 Lder	= 0.1;
 
 
