--- a/examples/Samad_1994_9/Samad_1994_9.ini
+++ b/examples/Samad_1994_9/Samad_1994_9.ini
@@ -70,6 +70,7 @@ fc	  = 100.0;	    fracture conductivity [ft md]
 # 10 for double porosity infinite reservoir (S, C) transient spheres
 # 11 for infinite reservoir (S,C) with infinite conductivity fractured well
 # 12 for infinite reservoir (S,C) with finite conductivity fractured well
+# 13 for homogeneous anisotropic infinite reservoir (S, C) limited entry well
 ###########################################################################
 [Regression model]
 model = 12;
@@ -100,7 +101,7 @@ jac_xf     =  2;
 jac_fc     =  2;
 
 
-[Derivative parameters]
+[Smoothing parameters]
 Lder	= 0.1; 	dreivative interval
 
 
