add porosity as estimate parameter

--- a/examples/Bourdet_1983_1/Bourdet_example_1b.ini
+++ b/examples/Bourdet_1983_1/Bourdet_example_1b.ini
@@ -60,6 +60,7 @@ rp_k	= 1;
 rp_C	= 1;
 rp_pi	= 1;
 rp_re   = 0;
+rp_phi  = 0;
 
 
 ###########################################################################
@@ -74,6 +75,7 @@ jac_k	=  0;
 jac_C	=  0;
 jac_pi	=  0;
 jac_re	=  2;
+jac_phi = 2;
 
 
 ###########################################################################
