--- a/examples/Bourdet_1983_2/Bourdet_example_2.ini
+++ b/examples/Bourdet_1983_2/Bourdet_example_2.ini
@@ -94,6 +94,7 @@ rp_pi	= 1;
 rp_re	= 0;
 rp_L	= 0;
 rp_xf	= 0;
+rp_phi  = 0;
 
 ###############################################################################
 #  Derivatives:
@@ -110,6 +111,7 @@ jac_pi	=  0;
 jac_re	=  2;
 jac_L	=  2;
 jac_xf	=  2;
+jac_phi =  2;
 
 
 [Smoothing parameters]
