--- a/examples/Bourdet_1983b/Bourdet_1983b.ini
+++ b/examples/Bourdet_1983b/Bourdet_1983b.ini
@@ -91,6 +91,7 @@ rp_C	  = 1;
 rp_pi	  = 1;
 rp_omega  = 1;
 rp_lambda = 1;
+rp_phi    = 0;
 
 
 ###############################################################################
@@ -107,6 +108,7 @@ jac_C	   =  2;
 jac_pi	   =  2;
 jac_omega  =  2;
 jac_lambda =  2;
+jac_phi    =  2;
 
 
 [Smoothing parameters]
