--- a/examples/Bourdet_1983b/Bourdet_1983b_a.ini
+++ b/examples/Bourdet_1983b/Bourdet_1983b_a.ini
@@ -88,6 +88,7 @@ rp_k	  = 1;
 rp_C	  = 1;
 rp_pi	  = 1;
 rp_L	  = 1;
+rp_phi    = 0;
 
 
 ###############################################################################
@@ -103,6 +104,7 @@ jac_k	   =  0;
 jac_C	   =  0;
 jac_pi	   =  0;
 jac_L	   =  0;
+jac_phi    =  2;
 
 
 [Smoothing parameters]
