--- a/examples/Bourdet_1983b/Bourdet_1983b_b.ini
+++ b/examples/Bourdet_1983b/Bourdet_1983b_b.ini
@@ -85,6 +85,7 @@ rp_C	  = 1;
 rp_pi	  = 0;
 rp_omega  = 1;
 rp_lambda = 1;
+rp_phi    = 0;
 
 
 ###############################################################################
@@ -101,6 +102,7 @@ jac_C	   =  2;
 jac_pi	   =  2;
 jac_omega  =  2;
 jac_lambda =  2;
+jac_phi    =  2;
 
 
 [Smoothing parameters]
