--- a/examples/Bourdet_1984/Bourdet_1984.ini
+++ b/examples/Bourdet_1984/Bourdet_1984.ini
@@ -83,6 +83,7 @@ rp_C	  = 1;
 rp_pi	  = 1;
 rp_omega  = 1;
 rp_lambda = 1;
+rp_phi    = 0;
 
 
 ###############################################################################
@@ -99,6 +100,7 @@ jac_C	   =  0;
 jac_pi	   =  0;
 jac_omega  =  2;
 jac_lambda =  2;
+jac_phi    =  2;
 
 
 [Smoothing parameters]
