--- a/examples/Lee_2003_2_12/Lee_example_2_12c.ini
+++ b/examples/Lee_2003_2_12/Lee_example_2_12c.ini
@@ -7,7 +7,7 @@
 #     ____________________________________________________________________
 #
 #	phi = 0,039 		p_i = 4412 psia
-#	µ   = 0,8 cp 		c_t = 17×10^-6 psi^-1
+#	ï¿½   = 0,8 cp 		c_t = 17ï¿½10^-6 psi^-1
 #	r_w = 0,198 ft 		B 	= 1,136
 #	q   = 250 STB/d 	h 	= 69 ft
 #     ____________________________________________________________________
@@ -100,6 +100,7 @@ rp_w1x  = 1;
 rp_w2x  = 1;
 rp_w1y  = 1;
 rp_w2y  = 1;
+rp_phi  = 0;
 
 
 ###########################################################################
@@ -117,7 +118,7 @@ jac_w1x	=  2;
 jac_w2x	=  2;
 jac_w1y	=  2;
 jac_w2y	=  2;
-
+jac_phi =  2;
 
 [Smoothing parameters]
 Lder	= 0.1;
