--- a/examples/Samad_1994_7/Samad_1994_7.ini
+++ b/examples/Samad_1994_7/Samad_1994_7.ini
@@ -81,6 +81,7 @@ rp_k	  = 1;
 rp_C	  = 1;
 rp_pi	  = 0;
 rp_xf     = 1;
+rp_phi    = 0;
 
 
 ###############################################################################
@@ -96,6 +97,7 @@ jac_k	   =  2;
 jac_C	   =  2;
 jac_pi	   =  2;
 jac_xf     =  2;
+jac_phi    =  2;
 
 dx_xf      =  1.0e-3;
 
