--- a/examples/Samad_1994_9/Samad_1994_9.ini
+++ b/examples/Samad_1994_9/Samad_1994_9.ini
@@ -83,6 +83,7 @@ rp_C	  = 0;
 rp_pi	  = 0;
 rp_xf     = 1;
 rp_fc     = 1;
+rp_phi    = 0;
 
 
 ###############################################################################
@@ -99,6 +100,7 @@ jac_C	   =  2;
 jac_pi	   =  2;
 jac_xf     =  2;
 jac_fc     =  2;
+jac_phi    =  2;
 
 
 [Smoothing parameters]
