--- a/examples/Bourdet_1983_1/Bourdet_example_1.ini
+++ b/examples/Bourdet_1983_1/Bourdet_example_1.ini
@@ -61,6 +61,7 @@ rp_k	= 1;
 rp_C	= 1;
 rp_pi	= 1;
 rp_re   = 0;
+rp_phi  = 0;
 
 
 ###########################################################################
@@ -75,6 +76,7 @@ jac_k	=  0;
 jac_C	=  0;
 jac_pi	=  0;
 jac_re	=  0;
+jac_phi =  2;
 
 
 ###########################################################################
