--- a/examples/Lee_2003_2_12/Lee_example_2_12.ini
+++ b/examples/Lee_2003_2_12/Lee_example_2_12.ini
@@ -7,7 +7,7 @@
 #     ____________________________________________________________________
 #
 #	phi = 0,039 		p_i = 4412 psia
-#	µ   = 0,8 cp 		c_t = 17×10^-6 psi^-1
+#	ï¿½   = 0,8 cp 		c_t = 17ï¿½10^-6 psi^-1
 #	r_w = 0,198 ft 		B 	= 1,136
 #	q   = 250 STB/d 	h 	= 69 ft
 #     ____________________________________________________________________
@@ -95,6 +95,7 @@ rp_k	= 1;
 rp_C	= 1;
 rp_pi	= 1;
 rp_re   = 1;
+rp_phi  = 0;
 
 
 ###########################################################################
@@ -109,6 +110,8 @@ jac_k	=  0;
 jac_C	=  0;
 jac_pi	=  0;
 jac_re	=  0;
+jac_phi  = 2;
+
 
 
 [Smoothing parameters]
