--- a/examples/Lee_2003_2_12/Lee_example_2_12.ini
+++ b/examples/Lee_2003_2_12/Lee_example_2_12.ini
@@ -23,7 +23,8 @@ caseid = drawdown test;
 #  1 analytical simulation
 ###############################################################################
 [Program mode]
-mode  = 0;
+mode        = 0;
+interactive = 1;
 
 
 ###############################################################################
@@ -121,5 +122,5 @@ nstehfest = 16;
 
 [Output]
 plots   = 1;
-outfile = examples/Lee_2003_2_12/Lee_example_2_12.out;
+outfile = examples/Lee_2003_2_12/Lee_example_2_12;
 
